-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 3.2.1
-
5a75b87b37a89b8ebec7b5507239204b51fe1c03
QtCreator reports "file: lib/libtest.a has no symbols" when building static library after installing Xcode 6.
The static library builds ok, as not having any symbols in a cpp file is not an error, but QtCreator shows it as an error in Issues window. This shouldn't happen.
Example output:
[...]
ranlib: file: lib/libtest.a(Test0.cpp.o) has no symbols
ranlib: file: lib/libtest.a(Test1.cpp.o) has no symbols
ranlib: file: lib/libtest.a(Test2.cpp.o) has no symbols
ranlib: file: lib/libtest.a(Test3.cpp.o) has no symbols
ranlib: file: lib/libtest.a(Test4.cpp.o) has no symbols
[...]
Errors in Issues window:
file: lib/libtest.a(Test0.cpp.o) has no symbols
file: lib/libtest.a(Test1.cpp.o) has no symbols
file: lib/libtest.a(Test2.cpp.o) has no symbols
file: lib/libtest.a(Test3.cpp.o) has no symbols
file: lib/libtest.a(Test4.cpp.o) has no symbols
For Gerrit Dashboard: QTCREATORBUG-13111 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
107533,2 | OutputParser: Treat ranlib warnings as warnings | 3.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |