OutputParser: Treat ranlib warnings as warnings

Task-number: QTCREATORBUG-13111
Change-Id: Ifead2f7fa8d00eb044894b6d9ef0e7626e13f867
Reviewed-by: Eike Ziller <eike.ziller@theqtcompany.com>